# old-driver

./: .eslintrc  .eslintrc.cjs  .gitignore  .stylelintrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx  App.vue  components.d.ts  main.ts  main.tsx  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json  upx.js  upx.py
src-tauri/icons/: icon.icns
src-tauri/linux/: old-driver.desktop
src-tauri/src/: config.rs  image.rs  logger.rs  main.rs  models.rs  path.rs  pdf.rs
src-tauri/wix/: app.wxs
src-tauri/wix/locales/: zh-CN.wxl
src/components/: DraggableImageListItem.tsx  FloatButtons.tsx  HelloWorld.vue  ImageList.tsx  ImageListItemActions.tsx  Selecter.tsx  TitleBar.tsx  image-list.vue  index.d.ts  select-files.vue
src/components/layouts/: BaseHeader.vue
src/components/settings/: Global.tsx
src/lib/: const.ts  image.ts  index.ts  route.ts
src/styles/: Selecter.scss  imageList.scss  index.scss  selecter.scss  titleBar.scss
types/: event.d.ts  image.d.ts
