[package]
name = "old-driver"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = [
    "dialog-open",
    "dialog-save",
    "path-all",
    "protocol-asset",
    "shell-open",
    "window-close",
    "window-hide",
    "window-maximize",
    "window-minimize",
    "window-show",
    "window-start-dragging",
    "window-unmaximize",
    "window-unminimize",
] }
lopdf = { git = "https://github.com/J-F-Liu/lopdf", features = ["embed_image"] }
image = "0.24"
tokio = { version = "1", features = ["full"] }
log = "0.4"
simplelog = "0.12"
time = { version = "0.3", features = ['formatting'] }
dirs = "4.0"
lazy_static = "1.4"

# 无边框时使用的库
# window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
